--- a/content/notebooks/feature_engineering.html
+++ b/content/notebooks/feature_engineering.html
@@ -476,6 +476,7 @@ the latest polars version.</p>
 <span class="kn">import</span><span class="w"> </span><span class="nn">warnings</span>
 
 <span class="kn">from</span><span class="w"> </span><span class="nn">tutorial_helpers</span><span class="w"> </span><span class="kn">import</span> <span class="p">(</span>
+    <span class="n">binned_coverage</span><span class="p">,</span>
     <span class="n">plot_lorenz_curve</span><span class="p">,</span>
     <span class="n">plot_reliability_diagram</span><span class="p">,</span>
     <span class="n">plot_residuals_vs_predicted</span><span class="p">,</span>
@@ -495,14 +496,15 @@ the latest polars version.</p>
 <span class="g g-Whitespace">     </span><span class="mi">11</span> <span class="kn">import</span><span class="w"> </span><span class="nn">holidays</span>
 <span class="g g-Whitespace">     </span><span class="mi">12</span> <span class="kn">import</span><span class="w"> </span><span class="nn">warnings</span>
 <span class="ne">---&gt; </span><span class="mi">14</span> <span class="kn">from</span><span class="w"> </span><span class="nn">tutorial_helpers</span><span class="w"> </span><span class="kn">import</span> <span class="p">(</span>
-<span class="g g-Whitespace">     </span><span class="mi">15</span>     <span class="n">plot_lorenz_curve</span><span class="p">,</span>
-<span class="g g-Whitespace">     </span><span class="mi">16</span>     <span class="n">plot_reliability_diagram</span><span class="p">,</span>
-<span class="g g-Whitespace">     </span><span class="mi">17</span>     <span class="n">plot_residuals_vs_predicted</span><span class="p">,</span>
-<span class="g g-Whitespace">     </span><span class="mi">18</span>     <span class="n">plot_binned_residuals</span><span class="p">,</span>
-<span class="g g-Whitespace">     </span><span class="mi">19</span>     <span class="n">plot_horizon_forecast</span><span class="p">,</span>
-<span class="g g-Whitespace">     </span><span class="mi">20</span> <span class="p">)</span>
-<span class="g g-Whitespace">     </span><span class="mi">22</span> <span class="c1"># Ignore warnings from pkg_resources triggered by Python 3.13&#39;s multiprocessing.</span>
-<span class="g g-Whitespace">     </span><span class="mi">23</span> <span class="n">warnings</span><span class="o">.</span><span class="n">filterwarnings</span><span class="p">(</span><span class="s2">&quot;ignore&quot;</span><span class="p">,</span> <span class="n">category</span><span class="o">=</span><span class="ne">UserWarning</span><span class="p">,</span> <span class="n">module</span><span class="o">=</span><span class="s2">&quot;pkg_resources&quot;</span><span class="p">)</span>
+<span class="g g-Whitespace">     </span><span class="mi">15</span>     <span class="n">binned_coverage</span><span class="p">,</span>
+<span class="g g-Whitespace">     </span><span class="mi">16</span>     <span class="n">plot_lorenz_curve</span><span class="p">,</span>
+<span class="g g-Whitespace">     </span><span class="mi">17</span>     <span class="n">plot_reliability_diagram</span><span class="p">,</span>
+<span class="g g-Whitespace">     </span><span class="mi">18</span>     <span class="n">plot_residuals_vs_predicted</span><span class="p">,</span>
+<span class="g g-Whitespace">     </span><span class="mi">19</span>     <span class="n">plot_binned_residuals</span><span class="p">,</span>
+<span class="g g-Whitespace">     </span><span class="mi">20</span>     <span class="n">plot_horizon_forecast</span><span class="p">,</span>
+<span class="g g-Whitespace">     </span><span class="mi">21</span> <span class="p">)</span>
+<span class="g g-Whitespace">     </span><span class="mi">23</span> <span class="c1"># Ignore warnings from pkg_resources triggered by Python 3.13&#39;s multiprocessing.</span>
+<span class="g g-Whitespace">     </span><span class="mi">24</span> <span class="n">warnings</span><span class="o">.</span><span class="n">filterwarnings</span><span class="p">(</span><span class="s2">&quot;ignore&quot;</span><span class="p">,</span> <span class="n">category</span><span class="o">=</span><span class="ne">UserWarning</span><span class="p">,</span> <span class="n">module</span><span class="o">=</span><span class="s2">&quot;pkg_resources&quot;</span><span class="p">)</span>
 
 <span class="ne">ModuleNotFoundError</span>: No module named &#39;tutorial_helpers&#39;
 </pre></div>
@@ -2165,84 +2167,6 @@ computationally expensive.</p>
     <span class="n">y_quantile_low</span> <span class="o">=</span> <span class="n">np</span><span class="o">.</span><span class="n">asarray</span><span class="p">(</span><span class="n">y_quantile_low</span><span class="p">)</span>
     <span class="n">y_quantile_high</span> <span class="o">=</span> <span class="n">np</span><span class="o">.</span><span class="n">asarray</span><span class="p">(</span><span class="n">y_quantile_high</span><span class="p">)</span>
     <span class="k">return</span> <span class="nb">float</span><span class="p">(</span><span class="n">np</span><span class="o">.</span><span class="n">abs</span><span class="p">(</span><span class="n">y_quantile_high</span> <span class="o">-</span> <span class="n">y_quantile_low</span><span class="p">)</span><span class="o">.</span><span class="n">mean</span><span class="p">()</span><span class="o">.</span><span class="n">round</span><span class="p">(</span><span class="mi">1</span><span class="p">))</span>
-
-
-<span class="k">def</span><span class="w"> </span><span class="nf">binned_coverage</span><span class="p">(</span><span class="n">y_true_folds</span><span class="p">,</span> <span class="n">y_quantile_low</span><span class="p">,</span> <span class="n">y_quantile_high</span><span class="p">,</span> <span class="n">n_bins</span><span class="o">=</span><span class="mi">10</span><span class="p">):</span>
-<span class="w">    </span><span class="sd">&quot;&quot;&quot;Compute coverage after binning true values using quantile-based binning.</span>
-
-<span class="sd">    Parameters</span>
-<span class="sd">    ----------</span>
-<span class="sd">    y_true_folds : list of numpy.ndarray</span>
-<span class="sd">        List of true target values, one array per CV fold</span>
-<span class="sd">    y_quantile_low : list of numpy.ndarray</span>
-<span class="sd">        List of lower quantile predictions, one array per CV fold</span>
-<span class="sd">    y_quantile_high : list of numpy.ndarray</span>
-<span class="sd">        List of upper quantile predictions, one array per CV fold</span>
-<span class="sd">    n_bins : int, default=10</span>
-<span class="sd">        Number of bins to create</span>
-
-<span class="sd">    Returns</span>
-<span class="sd">    -------</span>
-<span class="sd">    pandas.DataFrame</span>
-<span class="sd">        DataFrame with columns: bin_left, bin_right, bin_center, fold_idx,</span>
-<span class="sd">        coverage, mean_width, n_samples</span>
-<span class="sd">    &quot;&quot;&quot;</span>
-    <span class="c1"># Use all true values to define global bin boundaries</span>
-    <span class="n">all_true_values</span> <span class="o">=</span> <span class="n">np</span><span class="o">.</span><span class="n">concatenate</span><span class="p">(</span><span class="n">y_true_folds</span><span class="p">)</span>
-    <span class="n">df</span> <span class="o">=</span> <span class="n">pd</span><span class="o">.</span><span class="n">DataFrame</span><span class="p">({</span><span class="s2">&quot;bin_by&quot;</span><span class="p">:</span> <span class="n">all_true_values</span><span class="p">})</span>
-    <span class="n">df</span><span class="p">[</span><span class="s2">&quot;bin&quot;</span><span class="p">]</span> <span class="o">=</span> <span class="n">pd</span><span class="o">.</span><span class="n">qcut</span><span class="p">(</span><span class="n">df</span><span class="p">[</span><span class="s2">&quot;bin_by&quot;</span><span class="p">],</span> <span class="n">q</span><span class="o">=</span><span class="n">n_bins</span><span class="p">,</span> <span class="n">labels</span><span class="o">=</span><span class="kc">False</span><span class="p">,</span> <span class="n">duplicates</span><span class="o">=</span><span class="s2">&quot;drop&quot;</span><span class="p">)</span>
-
-    <span class="c1"># Get bin boundaries for consistent binning across folds</span>
-    <span class="n">bin_boundaries</span> <span class="o">=</span> <span class="p">[]</span>
-    <span class="k">for</span> <span class="n">bin_idx</span> <span class="ow">in</span> <span class="nb">sorted</span><span class="p">(</span><span class="n">df</span><span class="p">[</span><span class="s2">&quot;bin&quot;</span><span class="p">]</span><span class="o">.</span><span class="n">dropna</span><span class="p">()</span><span class="o">.</span><span class="n">unique</span><span class="p">()):</span>
-        <span class="n">bin_mask</span> <span class="o">=</span> <span class="n">df</span><span class="p">[</span><span class="s2">&quot;bin&quot;</span><span class="p">]</span> <span class="o">==</span> <span class="n">bin_idx</span>
-        <span class="n">bin_values</span> <span class="o">=</span> <span class="n">df</span><span class="o">.</span><span class="n">loc</span><span class="p">[</span><span class="n">bin_mask</span><span class="p">,</span> <span class="s2">&quot;bin_by&quot;</span><span class="p">]</span>
-        <span class="n">bin_boundaries</span><span class="o">.</span><span class="n">append</span><span class="p">((</span><span class="n">bin_values</span><span class="o">.</span><span class="n">min</span><span class="p">(),</span> <span class="n">bin_values</span><span class="o">.</span><span class="n">max</span><span class="p">()))</span>
-
-    <span class="n">results</span> <span class="o">=</span> <span class="p">[]</span>
-    <span class="n">n_folds</span> <span class="o">=</span> <span class="nb">len</span><span class="p">(</span><span class="n">y_quantile_low</span><span class="p">)</span>
-
-    <span class="k">for</span> <span class="n">fold_idx</span> <span class="ow">in</span> <span class="nb">range</span><span class="p">(</span><span class="n">n_folds</span><span class="p">):</span>
-        <span class="n">fold_true</span> <span class="o">=</span> <span class="n">y_true_folds</span><span class="p">[</span><span class="n">fold_idx</span><span class="p">]</span>
-        <span class="n">fold_low</span> <span class="o">=</span> <span class="n">y_quantile_low</span><span class="p">[</span><span class="n">fold_idx</span><span class="p">]</span>
-        <span class="n">fold_high</span> <span class="o">=</span> <span class="n">y_quantile_high</span><span class="p">[</span><span class="n">fold_idx</span><span class="p">]</span>
-
-        <span class="c1"># Assign each sample in this fold to a bin</span>
-        <span class="n">fold_bins</span> <span class="o">=</span> <span class="p">(</span>
-            <span class="n">np</span><span class="o">.</span><span class="n">digitize</span><span class="p">(</span><span class="n">fold_true</span><span class="p">,</span> <span class="n">bins</span><span class="o">=</span><span class="p">[</span><span class="n">b</span><span class="p">[</span><span class="mi">0</span><span class="p">]</span> <span class="k">for</span> <span class="n">b</span> <span class="ow">in</span> <span class="n">bin_boundaries</span><span class="p">]</span> <span class="o">+</span> <span class="p">[</span><span class="n">np</span><span class="o">.</span><span class="n">inf</span><span class="p">])</span> <span class="o">-</span> <span class="mi">1</span>
-        <span class="p">)</span>
-
-        <span class="k">for</span> <span class="n">bin_idx</span><span class="p">,</span> <span class="p">(</span><span class="n">bin_left</span><span class="p">,</span> <span class="n">bin_right</span><span class="p">)</span> <span class="ow">in</span> <span class="nb">enumerate</span><span class="p">(</span><span class="n">bin_boundaries</span><span class="p">):</span>
-            <span class="c1"># Get samples from this fold that fall into this bin</span>
-            <span class="n">bin_mask</span> <span class="o">=</span> <span class="n">fold_bins</span> <span class="o">==</span> <span class="n">bin_idx</span>
-
-            <span class="k">if</span> <span class="n">np</span><span class="o">.</span><span class="n">sum</span><span class="p">(</span><span class="n">bin_mask</span><span class="p">)</span> <span class="o">==</span> <span class="mi">0</span><span class="p">:</span>
-                <span class="c1"># No samples in this bin for this fold</span>
-                <span class="k">continue</span>
-
-            <span class="n">fold_bin_true</span> <span class="o">=</span> <span class="n">fold_true</span><span class="p">[</span><span class="n">bin_mask</span><span class="p">]</span>
-            <span class="n">fold_bin_low</span> <span class="o">=</span> <span class="n">fold_low</span><span class="p">[</span><span class="n">bin_mask</span><span class="p">]</span>
-            <span class="n">fold_bin_high</span> <span class="o">=</span> <span class="n">fold_high</span><span class="p">[</span><span class="n">bin_mask</span><span class="p">]</span>
-
-            <span class="n">bin_center</span> <span class="o">=</span> <span class="p">(</span><span class="n">bin_left</span> <span class="o">+</span> <span class="n">bin_right</span><span class="p">)</span> <span class="o">/</span> <span class="mi">2</span>
-            <span class="n">n_samples_in_bin</span> <span class="o">=</span> <span class="nb">len</span><span class="p">(</span><span class="n">fold_bin_true</span><span class="p">)</span>
-
-            <span class="n">coverage_score</span> <span class="o">=</span> <span class="n">coverage</span><span class="p">(</span><span class="n">fold_bin_true</span><span class="p">,</span> <span class="n">fold_bin_low</span><span class="p">,</span> <span class="n">fold_bin_high</span><span class="p">)</span>
-            <span class="n">width</span> <span class="o">=</span> <span class="n">mean_width</span><span class="p">(</span><span class="n">fold_bin_true</span><span class="p">,</span> <span class="n">fold_bin_low</span><span class="p">,</span> <span class="n">fold_bin_high</span><span class="p">)</span>
-
-            <span class="n">results</span><span class="o">.</span><span class="n">append</span><span class="p">(</span>
-                <span class="p">{</span>
-                    <span class="s2">&quot;bin_left&quot;</span><span class="p">:</span> <span class="n">bin_left</span><span class="p">,</span>
-                    <span class="s2">&quot;bin_right&quot;</span><span class="p">:</span> <span class="n">bin_right</span><span class="p">,</span>
-                    <span class="s2">&quot;bin_center&quot;</span><span class="p">:</span> <span class="n">bin_center</span><span class="p">,</span>
-                    <span class="s2">&quot;fold_idx&quot;</span><span class="p">:</span> <span class="n">fold_idx</span><span class="p">,</span>
-                    <span class="s2">&quot;coverage&quot;</span><span class="p">:</span> <span class="n">coverage_score</span><span class="p">,</span>
-                    <span class="s2">&quot;mean_width&quot;</span><span class="p">:</span> <span class="n">width</span><span class="p">,</span>
-                    <span class="s2">&quot;n_samples&quot;</span><span class="p">:</span> <span class="n">n_samples_in_bin</span><span class="p">,</span>
-                <span class="p">}</span>
-            <span class="p">)</span>
-
-    <span class="k">return</span> <span class="n">pd</span><span class="o">.</span><span class="n">DataFrame</span><span class="p">(</span><span class="n">results</span><span class="p">)</span>
 </pre></div>
 </div>
 </div>
